updated background added timer message

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
             font-size: 60px;
             margin-top: 0px;
         }
+
+        html {
+            background-image: url("https://i1.sndcdn.com/artworks-000169983317-s7m3bb-t500x500.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
     </style>
 </head>
 
 <body>
-
+    <h1>Time left until halloween is on a wednesday</h1>
     <p id="demo"></p>
 
     <script>
