--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        h1 {
+            text-align: center;
+        }
+
         p {
             text-align: center;
             font-size: 60px;
@@ -14,6 +18,7 @@
             background-image: url("https://i1.sndcdn.com/artworks-000169983317-s7m3bb-t500x500.jpg");
             background-size: cover;
             background-repeat: no-repeat;
+            color: white;
         }
     </style>
 </head>
